--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "http-status-codes": "^2.3.0",
     "nodemon": "^3.0.3"
   }
 }
